# PythonFastHTMLProject-Template

./: .cursorrules  .gitignore  Makefile  README.org  app.py  pyproject.toml
docs/: REQUIREMENTS.org  RESTRUCTURING.org
src/web/: __init__.py
tests/: README.md  README.org  __init__.py  conftest.py  test_app.py  test_integration.py
